force-app/main/default/objects/Contract_Line_Item__c/fields/Ad_Size__c.field-meta.xml
<CustomField>
    <fullName>Ad_Size__c</fullName>
    <label>Ad Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>