force-app/main/default/objects/Contract_Line_Item__c/fields/Number_of_Schedule_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Schedule_Items__c</fullName>
    <label>Number of Schedule Items</label>
    <summaryForeignKey>Contract_Line_Item_Schedule__c.Contract_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>