force-app/main/default/objects/Contract_Line_Item__c/fields/Opportunity_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Id__c</fullName>
    <description>Id of the corresponding OLI to be synced to CLI. Backend field, used in Triggers.</description>
    <label>Opportunity Line Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>