force-app/main/default/objects/Contract_Line_Item__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
                <isActive>false</isActive>
                <label>Asia Pacific</label>
            </value>
            <value>
                <fullName>Latin America</fullName>
                <isActive>false</isActive>
                <label>Latin America</label>
            </value>
            <value>
                <fullName>PCHA</fullName>
                <isActive>false</isActive>
                <label>PCHA</label>
            </value>
            <value>
                <fullName>UK</fullName>
                <isActive>false</isActive>
                <label>UK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>