force-app/main/default/objects/Contract_Line_Item__c/fields/Revenue_Error__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Error</label>
    <type>Checkbox</type>
</CustomField>