force-app/main/default/objects/Contract_Line_Item__c/fields/wmxid__c.field-meta.xml
<CustomField>
    <fullName>wmxid__c</fullName>
    <externalId>true</externalId>
    <label>wmxid</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>