force-app/main/default/objects/Contract_Line_Item__c/validationRules/Media_Activated_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Media_Activated_Past_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
End_Date__c  &lt;  TODAY(), 
ISPICKVAL( Contract__r.Status , &quot;Activated&quot;))</errorConditionFormula>
    <errorMessage>You cannot edit this line item due to the End Date being in the past</errorMessage>
</ValidationRule>